flink-demo/k8s/datagen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: datagen
  name: datagen
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: datagen
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: datagen
    spec:
      containers:
        - args:
            - java
            - -classpath
            - /opt/datagen/flink-sql-demo.jar
            - myflink.SourceGenerator
            - --input
            - /opt/datagen/user_behavior.log
            - --output
            - kafka
            - kafka:9094
            - --speedup
            - "2000"
          image: jark/datagen:0.2
          name: datagen
          resources: {}
      restartPolicy: Always
status: {}
