flink-demo/k8s/jobmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jobmanager
  name: jobmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jobmanager
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: jobmanager
    spec:
      containers:
        - args:
            - jobmanager
          image: flink:1.11.0-scala_2.11
          name: jobmanager
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
