flink-demo/k8s/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:7.6.0
          name: kibana
          ports:
            - containerPort: 5601
          resources: {}
      restartPolicy: Always
status: {}
