flink-demo/k8s/sql-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: sql-client
  name: sql-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sql-client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: sql-client
    spec:
      containers:
        - env:
            - name: ES_HOST
              value: elasticsearch
            - name: FLINK_JOBMANAGER_HOST
              value: jobmanager
            - name: KAFKA_BOOTSTRAP
              value: kafka
            - name: MYSQL_HOST
              value: mysql
            - name: ZOOKEEPER_CONNECT
              value: zookeeper
          image: jark/demo-sql-client:0.2
          name: sql-client
          resources: {}
      restartPolicy: Always
status: {}
