flink-demo/k8s/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: taskmanager
  name: taskmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taskmanager
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: taskmanager
    spec:
      containers:
        - args:
            - taskmanager
          image: flink:1.11.0-scala_2.11
          name: taskmanager
          resources: {}
      restartPolicy: Always
status: {}
