flink-demo/k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    app: zookeeper
  name: zookeeper
spec:
  ports:
    - name: "zookeeper"
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
