flink-demo/k8s/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zookeeper
  labels:
    app: zookeeper  
spec:
  entryPoints:
    - tcpep
  routes:
  - match: HostSNI(`*`)
    services:
      - name: zookeeper
        port: 2181
